fix backgrounds on mobile

--- a/css/master.css
+++ b/css/master.css
@@ -106,6 +106,13 @@ body {
   font-weight: 900;
     font-size: 3rem;
 }
+.first-section-page__aboutus {
+background-image: url(../images/bg8.png);
+background-repeat: no-repeat;
+background-size: cover;
+background-position: 0px 0px;
+background-color: #fff;
+}
 
 }
 
@@ -198,8 +205,8 @@ body {
     order: 1;
     }
     .first-section-page__aboutus {
-    height: 100%;
-    padding-bottom: 40%;
+      text-align: center;
+    padding-bottom: 10%;
   }
   .first-section-page__aboutus h1 {
     font-weight: 700;
@@ -207,6 +214,12 @@ body {
   }
   .aboutus__header h3 {
     font-size: 1.2rem;
+  }
+  .first-section-page__aboutus {
+  background-image: -webkit-linear-gradient(-60deg, rgb(121, 175, 212) 1%, rgb(67, 198, 185) 100%);
+  }
+  .second-section-page__goals {
+    margin-top: 4rem;
   }
 
 }
@@ -592,13 +605,7 @@ padding: 0;
 }
 
 .first-section-page__aboutus {
-background-image: url(../images/bg8.png);
-background-repeat: no-repeat;
 color: #fff;
-background-size: cover;
-background-position: 0px 0px;
-background-color: #fff;
-
 
 }
 
